--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock %}Sagacity Digital Health Interventions and Awareness Campaign</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     {% block css %}
     {% endblock %}
 </head>
@@ -16,9 +16,9 @@
 {% endblock %}
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar sticky-top navbar-expand-lg  navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Navbar</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}"><i class="bi bi-heart-pulse-fill"></i> Sagacity DHI</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -28,6 +28,15 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if url_for('index') == request.full_path[:-1] %}active{% endif %}" aria-current="page" href="{{ url_for('index') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="{{ url_for('index') }}#aboutUs">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_for('events') in request.full_path %}active{% endif %}" aria-current="page" href="{{ url_for('events') }}">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_for('blog') in request.full_path %}active{% endif %}" aria-current="page" href="{{ url_for('blog') }}">Blog</a>
                     </li>
                     {% if not session.get('user') %}
                         <li class="nav-item">
@@ -59,9 +68,19 @@
     {% block body %}
     {% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <footer class="bg-light">
+        <div class="container p-3">
+            <h4>Contact Us</h4>
+            <hr>
+            <p><i class="bi bi-telephone-fill"></i> Phone: +880 92654-546</p>
+            <p><i class="bi bi-envelope-fill"></i> Email: sagacity@email.com</p>
+        </div>
+        <div class="container-fluid" id="copyright">
+
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
