--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,7 +1,174 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <div class="container">
-        <h1>Welcome to our webiste</h1>
-    </div>
+<div class="container">
+    <section class="mb-3">
+        <div class="row mb-3">
+            <div class="col-sm-8">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="{{ url_for('static', filename='slide1.webp') }}" class="d-block w-100" alt="..." height="518px">
+                            <div class="carousel-caption d-sm-block d-md-block text-center w-100" style="left: 0; background-color: #000000AA">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ url_for('static', filename='slide2.webp') }}" class="d-block w-100" alt="..." height="518px">
+                            <div class="carousel-caption d-sm-block d-md-block text-center w-100" style="left: 0; background-color: #000000AA">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ url_for('static', filename='slide3.webp') }}" class="d-block w-100" alt="..." height="518px">
+                            <div class="carousel-caption d-sm-block d-md-block text-center w-100" style="left: 0; background-color: #000000AA">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="container-fluid bg-secondary h-100 text-light p-3">
+                    <h1>Welcome to Sagacity Digital Health Intervention</h1>
+                    <hr>
+                    <h3>Your health is our priority</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mb-3">
+        <h2>Upcoming events</h2>
+        <div class="row row-cols-3 mb-3">
+            {% if latest_events %}
+                {% for each_event in latest_events %}
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ each_event['event_name'] }}</h5>
+                            <p class="card-text">{{ each_event['event_details'] }}</p>
+                            <a class="btn btn-link" href="{{ url_for('events', id=each_event['id']) }}">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+                {% else %}
+                <h4>Events coming soon</h4>
+                {% endif %}
+        </div>
+        {% if latest_events %}
+            <a class="btn btn-primary" href="{{ url_for('events') }}">See More Events</a>
+        {% endif %}
+        
+    </section>
+    <section class="mb-3">
+        <h2>Latest blog posts from our Health Care Professionals</h2>
+        <div class="row row-cols-3 mb-3">
+            {% if blog_posts %}
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                                the
+                                card's content.</p>
+                            <a class="btn btn-link" href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <h4>Blog posts coming soon</h4>
+            {% endif %}
+        </div>
+        {% if blog_posts %}
+            <a class="btn btn-primary" href="{{ url_for('blog') }}">See More Blog Posts</a>
+        {% endif %}
+    </section>
+    <section id="aboutUs" class="mb-3">
+        <h2>About Us</h2>
+        <div class="row row-cols-">
+            <div class="col mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ url_for('static', filename='sajeed.webp') }}" class="card-img-top"
+                        alt="Sajeed Ahmed Galib Arnob">
+                    <div class="card-body">
+                        <h5 class="card-title">Sajeed Ahmed Galib Arnob</h5>
+                        <h6 class="card-subtitle text-body-secondary mb-2">Founder</h6>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ url_for('static', filename='kainat.webp') }}" class="card-img-top" alt="Noor-E-Kainat">
+                    <div class="card-body">
+                        <h5 class="card-title">Noor-E-Kainat</h5>
+                        <h6 class="card-subtitle text-body-secondary mb-2">CEO</h6>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ url_for('static', filename='hasibul.webp') }}" class="card-img-top"
+                        alt="Hasibul Hossain">
+                    <div class="card-body">
+                        <h5 class="card-title">Hasibul Hossain</h5>
+                        <h6 class="card-subtitle text-body-secondary mb-2">Marketing Manager</h6>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ url_for('static', filename='nisa.webp') }}" class="card-img-top" alt="Nisa Islam">
+                    <div class="card-body">
+                        <h5 class="card-title">Nisa Islam</h5>
+                        <h6 class="card-subtitle text-body-secondary mb-2">Public Relations Manager</h6>
+                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>Our Aim</h2>
+        <p>Our primary goal is to harness digital technology to improve public health outcomes
+            by providing resources, tools, and information to healthcare professionals, policymakers, and the public. It
+            aims to foster the development, implementation, and assessment of digital health interventions that are
+            effective, equitable, and culturally sensitive. By involving target communities in the creation process and
+            emphasizing inclusivity, the website seeks to integrate digital solutions into healthcare systems,
+            complementing traditional public health measures and promoting global health innovation.</p>
+    </section>
+</div>
 {% endblock %}
