--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login - {% endblock %}
 
 {% block body %}
-<div class="container" style="margin-top: 50px;">
+<div class="container mb-3" style="margin-top: 50px;">
     <form name="loginForm" method="POST" enctype="multipart/form-data">
         <legend>Login</legend>
         <div class="mb-3">
