dashboard near completion

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -53,7 +53,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="javascript:void(0);">Profile</a></li>
-                                <li><a class="dropdown-item" href="javascript:void(0);">Dashboard</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('dashboard') }}">Dashboard</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
