--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="{{ url_for('static', filename='favicon.ico') }}" rel="icon">
     {% block css %}
     {% endblock %}
 </head>
@@ -31,6 +32,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="{{ url_for('index') }}#aboutUs">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if url_for('faq') == request.full_path[:-1] %}active{% endif %}" aria-current="page" href="{{ url_for('faq') }}">FAQ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if url_for('events') in request.full_path %}active{% endif %}" aria-current="page" href="{{ url_for('events') }}">Events</a>
