--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -46,35 +46,12 @@
     {% if request.url.endswith('?page=blog_articles') %}
         <h2>My Blog Articles:</h2>
         {% if my_articles %}
-            <a class="btn btn-primary mb-3" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Blog Article</a>
+            <a class="btn btn-primary mb-3" href="{{ url_for('create_article') }}"><i class="bi bi-plus"></i>&nbsp;Create New Blog Article</a>
             <div class="row row-cols-auto">
                 {% for each_article in my_articles %}
                     <div class="col mb-3">
                         <div class="card mb-3" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ each_article[1] }}</h5>
-                                <h6 class="card-subtitle text-body-secondary">Date Published: {{ each_article[2] }}</h6>
-                                <p class="card-text text-truncate">{{ each_article[3] }}</p>
-                                <a href="{{ url_for('blog', id=each_article[0]) }}" class="icon-link">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-        {% else %}
-            <h3>You currently have no articles</h3>
-            <a class="btn btn-primary" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Blog Article</a>
-        {% endif %}
-    {% elif request.url.endswith('?page=faq_articles') %}
-        <h2>My FAQ Articles:</h2>
-        {% if my_articles %}
-            <a class="btn btn-primary mb-3" href="#"><i class="bi bi-plus"></i>&nbsp;Create New FAQ Article</a>
-            <div class="row row-cols-auto">
-                {% for each_article in my_articles %}
-                    <div class="col mb-3">
-                        <div class="card mb-3" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="{% if each_article[4] %}{{ url_for('images', filename=each_article[4]) }}{% else %}{{ url_for('static', filename='no-image.webp') }}{% endif %}" class="card-img-top" alt="{{ each_article[1] }}">
                             <div class="card-body">
                                 <h5 class="card-title">{{ each_article[1] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Date Published: {{ each_article[2] }}</h6>
@@ -94,17 +71,47 @@
             </div>
         {% else %}
             <h3>You currently have no articles</h3>
-            <a class="btn btn-primary" href="#"><i class="bi bi-plus"></i>&nbsp;Create New FAQ Article</a>
+            <a class="btn btn-primary" href="{{ url_for('create_article') }}"><i class="bi bi-plus"></i>&nbsp;Create New Blog Article</a>
+        {% endif %}
+    {% elif request.url.endswith('?page=faq_articles') %}
+        <h2>My FAQ Articles:</h2>
+        {% if my_articles %}
+            <a class="btn btn-primary mb-3" href="{{ url_for('create_article') }}"><i class="bi bi-plus"></i>&nbsp;Create New FAQ Article</a>
+            <div class="row row-cols-auto">
+                {% for each_article in my_articles %}
+                    <div class="col mb-3">
+                        <div class="card mb-3" style="width: 18rem;">
+                            <img src="{% if each_article[4] %}{{ url_for('images', filename=each_article[4]) }}{% else %}{{ url_for('static', filename='no-image.webp') }}{% endif %}" class="card-img-top" alt="{{ each_article[1] }}">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ each_article[1] }}</h5>
+                                <h6 class="card-subtitle text-body-secondary">Date Published: {{ each_article[2] }}</h6>
+                                <p class="card-text text-truncate">{{ each_article[3] }}</p>
+                                <div class="d-flex">
+                                    <div class="p-2">
+                                        <a href="{{ url_for('create_article', id=each_article[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
+                                    </div>
+                                    <div class="p-2 ms-auto">
+                                        <a href="{{ url_for('blog', id=each_article[0]) }}" class="btn btn-sm btn-danger"><i class="bi bi-trash"></i>&nbsp; Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% else %}
+            <h3>You currently have no articles</h3>
+            <a class="btn btn-primary" href="{{ url_for('create_article') }}"><i class="bi bi-plus"></i>&nbsp;Create New FAQ Article</a>
         {% endif %}
     {% elif  request.url.endswith('?page=intervention_events')%}
         <h2>My Intervention Events:</h2>
         {% if intervention_events %}
-            <a class="btn btn-primary mb-3" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
+            <a class="btn btn-primary mb-3" href="{{ url_for('create_intervention_event') }}"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
             <div class="row row-cols-auto">
                 {% for each_event in intervention_events %}
                     <div class="col mb-3">
                         <div class="card mb-3" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="{% if each_event[6] %}{{ url_for('images', filename=each_event[6]) }}{% else %}{{ url_for('static', filename='no-image.webp') }}{% endif %}" class="card-img-top" alt="each_event[1]">
                             <div class="card-body">
                                 <h5 class="card-title">{{ each_event[1] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Event Venue: {{ each_event[2] }}</h6>
@@ -113,7 +120,7 @@
                                 <p class="card-text text-truncate">{{ each_event[5] }}</p>
                                 <div class="d-flex">
                                     <div class="p-2">
-                                        <a href="{{ url_for('blog', id=each_event[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
+                                        <a href="{{ url_for('event_details', id=each_event[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
                                     </div>
                                     <div class="p-2 ms-auto">
                                         <a href="{{ url_for('blog', id=each_event[0]) }}" class="btn btn-sm btn-danger"><i class="bi bi-trash"></i>&nbsp; Delete</a>
@@ -126,49 +133,17 @@
             </div>
         {% else %}
             <h3>You currently have no intervention events</h3>
-            <a class="btn btn-primary" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
-        {% endif %}
-    {% elif  request.url.endswith('?page=intervention_events')%}
-        <h2>My Intervention Events:</h2>
-        {% if intervention_events %}
-            <a class="btn btn-primary mb-3" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
-            <div class="row row-cols-auto">
-                {% for each_event in intervention_events %}
-                    <div class="col mb-3">
-                        <div class="card mb-3" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ each_event[1] }}</h5>
-                                <h6 class="card-subtitle text-body-secondary">Event Venue: {{ each_event[2] }}</h6>
-                                <h6 class="card-subtitle text-body-secondary">Start Date: {{ each_event[3] }}</h6>
-                                <h6 class="card-subtitle text-body-secondary">End Date: {{ each_event[4] }}</h6>
-                                <p class="card-text text-truncate">{{ each_event[5] }}</p>
-                                <div class="d-flex">
-                                    <div class="p-2">
-                                        <a href="{{ url_for('blog', id=each_event[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
-                                    </div>
-                                    <div class="p-2 ms-auto">
-                                        <a href="{{ url_for('blog', id=each_event[0]) }}" class="btn btn-sm btn-danger"><i class="bi bi-trash"></i>&nbsp; Delete</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-        {% else %}
-            <h3>You currently have no intervention events</h3>
-            <a class="btn btn-primary" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
+            <a class="btn btn-primary" href="{{ url_for('create_intervention_event') }}"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
         {% endif %}
     {% elif  request.url.endswith('?page=intervention_reports')%}
         <h2>My Intervention Events:</h2>
         {% if intervention_reports %}
-            <a class="btn btn-primary mb-3" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
+            <a class="btn btn-primary mb-3" href="{{ url_for('create_intervention_report') }}"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Report</a>
             <div class="row row-cols-auto">
                 {% for each_report in intervention_reports %}
                     <div class="col mb-3">
                         <div class="card mb-3" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="{% if each_report[5] %}{{ url_for('images', filename=each_report[5]) }}{% else %}{{ url_for('static', filename='no-image.webp') }}{% endif %}" class="card-img-top" alt="{{ each_report[3] }}">
                             <div class="card-body">
                                 <h5 class="card-title">{{ each_report[3] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Report Author: {{ each_report[1] }}</h6>
@@ -189,7 +164,7 @@
             </div>
         {% else %}
             <h3>You currently have no intervention reports</h3>
-            <a class="btn btn-primary" href="#"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
+            <a class="btn btn-primary" href="{{ url_for('create_intervention_report') }}"><i class="bi bi-plus"></i>&nbsp;Create New Intervention Event</a>
         {% endif %}
     {% endif %}
 </div>
