--- a/website/templates/faq.html
+++ b/website/templates/faq.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="container">
+<div class="container" style="min-height: 500px;">
     <h1 class="text-center mb-3">Answers to Frequently Asked Questions</h1>
     
     {% if not all_articles %}
