--- a/website/templates/blog.html
+++ b/website/templates/blog.html
@@ -14,7 +14,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">{{ each_article[1] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Date Published: {{ each_article[2] }}</h6>
-                                <p class="card-text text-truncate">{{ each_article[3] }}</p>
+                                <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_article[3] }}</p>
                                 <a href="{{ url_for('blog', id=each_article[0]) }}" class="icon-link">Read More</a>
                             </div>
                         </div>
