--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -55,7 +55,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">{{ each_article[1] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Date Published: {{ each_article[2] }}</h6>
-                                <p class="card-text text-truncate">{{ each_article[3] }}</p>
+                                <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_article[3] }}</p>
                                 <div class="d-flex">
                                     <div class="p-2">
                                         <a href="{{ url_for('blog', id=each_article[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
@@ -85,7 +85,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">{{ each_article[1] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Date Published: {{ each_article[2] }}</h6>
-                                <p class="card-text text-truncate">{{ each_article[3] }}</p>
+                                <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_article[3] }}</p>
                                 <div class="d-flex">
                                     <div class="p-2">
                                         <a href="{{ url_for('create_article', id=each_article[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
@@ -117,7 +117,7 @@
                                 <h6 class="card-subtitle text-body-secondary">Event Venue: {{ each_event[2] }}</h6>
                                 <h6 class="card-subtitle text-body-secondary">Start Date: {{ each_event[3] }}</h6>
                                 <h6 class="card-subtitle text-body-secondary">End Date: {{ each_event[4] }}</h6>
-                                <p class="card-text text-truncate">{{ each_event[5] }}</p>
+                                <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_event[5] }}</p>
                                 <div class="d-flex">
                                     <div class="p-2">
                                         <a href="{{ url_for('event_details', id=each_event[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
@@ -148,7 +148,7 @@
                                 <h5 class="card-title">{{ each_report[3] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Report Author: {{ each_report[1] }}</h6>
                                 <h6 class="card-subtitle text-body-secondary">Date Reported: {{ each_report[2] }}</h6>
-                                <p class="card-text text-truncate">{{ each_report[3] }}</p>
+                                <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_report[3] }}</p>
                                 <div class="d-flex">
                                     <div class="p-2">
                                         <a href="{{ url_for('blog', id=each_report[0]) }}" class="btn btn-sm btn-primary"><i class="bi bi-pencil"></i>&nbsp; Edit</a>
