--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -15,7 +15,7 @@
                                 <h5 class="card-title">{{ each_event[2] }}</h5>
                                 <h6 class="card-subtitle text-body-secondary">Event Date: {{ each_event[3] }}</h6>
                                 <h6 class="card-subtitle text-body-secondary">Event Venue: {{ each_event[4] }}</h6>
-                                <p class="card-text text-truncate">{{ each_event[5] }}</p>
+                                <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_event[5] }}</p>
                                 <a href="{{ url_for('event_details', id=each_event[0]) }}" class="icon-link">Read More</a>
                             </div>
                         </div>
