--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -17,24 +17,14 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="{{ url_for('static', filename='slide1.webp') }}" class="d-block w-100" alt="..." height="518px">
-                            <div class="carousel-caption d-sm-block d-md-block text-center w-100" style="left: 0; background-color: #000000AA">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="{{ url_for('static', filename='slide2.webp') }}" class="d-block w-100" alt="..." height="518px">
-                            <div class="carousel-caption d-sm-block d-md-block text-center w-100" style="left: 0; background-color: #000000AA">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
+                            
                         </div>
                         <div class="carousel-item">
                             <img src="{{ url_for('static', filename='slide3.webp') }}" class="d-block w-100" alt="..." height="518px">
-                            <div class="carousel-caption d-sm-block d-md-block text-center w-100" style="left: 0; background-color: #000000AA">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
+                            
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -70,7 +60,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ each_event[1] }}</h5>
                             <h6 class="card-subtitle text-body-secondary">Venue: {{ each_event[2] }}</h6>
-                            <p class="card-text">{{ each_event[3] }}</p>
+                            <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_event[3] }}</p>
                             <a class="btn btn-link" href="{{ url_for('events', id=each_event[0]) }}">Learn More</a>
                         </div>
                     </div>
@@ -95,7 +85,7 @@
                             <img src="{% if each_blog_post[3] %}{{ url_for('images', filename=each_blog_post[3]) }}{% else %}{{ url_for('static', filename='no-image.webp') }}{% endif %}" class="card-img-top" alt="{{ each_blog_post[1] }}">
                             <div class="card-body">
                                 <h5 class="card-title">{{ each_blog_post[1] }}</h5>
-                                <p class="card-text">{{ each_blog_post[2] }}</p>
+                                <p class="card-text" style="max-height: 100px; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">{{ each_blog_post[2] }}</p>
                                 <a class="btn btn-link" href="{{ url_for('blog', id=each_blog_post[0]) }}">Read More</a>
                             </div>
                         </div>
@@ -111,6 +101,7 @@
     </section>
     <section id="aboutUs" class="mb-3">
         <h2>About Us</h2>
+        <!--
         <div class="row row-cols-">
             <div class="col mb-3">
                 <div class="card" style="width: 18rem;">
@@ -119,9 +110,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Sajeed Ahmed Galib Arnob</h5>
                         <h6 class="card-subtitle text-body-secondary mb-2">Founder</h6>
-                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
-                            card's content.</p> -->
+                            card's content.</p>
                     </div>
                 </div>
             </div>
@@ -131,9 +122,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Noor-E-Kainat</h5>
                         <h6 class="card-subtitle text-body-secondary mb-2">CEO</h6>
-                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
-                            card's content.</p> -->
+                            card's content.</p>
                     </div>
                 </div>
             </div>
@@ -144,9 +135,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Hasibul Hossain</h5>
                         <h6 class="card-subtitle text-body-secondary mb-2">Marketing Manager</h6>
-                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
-                            card's content.</p> -->
+                            card's content.</p>
                     </div>
                 </div>
             </div>
@@ -156,13 +147,14 @@
                     <div class="card-body">
                         <h5 class="card-title">Nisa Islam</h5>
                         <h6 class="card-subtitle text-body-secondary mb-2">Public Relations Manager</h6>
-                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
-                            card's content.</p> -->
+                            card's content.</p>
                     </div>
                 </div>
             </div>
         </div>
+    -->
         <h2>Our Aim</h2>
         <p>Our primary goal is to harness digital technology to improve public health outcomes
             by providing resources, tools, and information to healthcare professionals, policymakers, and the public. It
